feat: add a bunch of get list (acc, patient, staff)
