# api/v1/accounts/routes.go
@@ -13,5 +13,6 @@ func Routes(r *gin.RouterGroup) {
 	r.POST("/register/create", RegisterAccountHandler)
 	r.POST("/register/patients", RegisterPatientHandler)
 	r.POST("/register/staffs", RegisterStaffHandler)
+	r.GET("", GetAccountListHandler)
 	r.GET("/profile", GetAccountInfoHandler)
 }
