# api/v1/staffs/routes.go
@@ -3,4 +3,5 @@ package staffs_api
 import "github.com/gin-gonic/gin"
 
 func Routes(r *gin.RouterGroup) {
+	r.GET("", GetStaffList)
 }
