# docs/swagger.json
@@ -13,14 +13,14 @@
     "host": "localhost:8080",
     "basePath": "/api/v1",
     "paths": {
-        "/accounts/get_info": {
+        "/accounts": {
             "get": {
                 "security": [
                     {
                         "BearerAuth": []
                     }
                 ],
-                "description": "API for user to get account info",
+                "description": "API for admin to get account list",
                 "consumes": [
                     "application/json"
                 ],
@@ -30,12 +30,15 @@
                 "tags": [
                     "accounts"
                 ],
-                "summary": "Get account info",
+                "summary": "Get account list (admin)",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.AccountInfo"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.AccountInfo"
+                            }
                         }
                     },
                     "400": {
@@ -44,8 +47,8 @@
                     "401": {
                         "description": "Unauthorized"
                     },
-                    "404": {
-                        "description": "Not Found"
+                    "403": {
+                        "description": "Forbidden"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -82,6 +85,46 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.LoginResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/accounts/profile": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "API for user to get account info",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "Get account info",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.AccountInfo"
                         }
                     },
                     "400": {
@@ -237,7 +280,7 @@
                         "BearerAuth": []
                     }
                 ],
-                "description": "Initiate registration",
+                "description": "Check whether the citizen ID is already registered",
                 "consumes": [
                     "application/json"
                 ],
@@ -247,7 +290,7 @@
                 "tags": [
                     "accounts"
                 ],
-                "summary": "Check whether the citizen ID is already registered",
+                "summary": "Initiate registration (admin, receptionist)",
                 "parameters": [
                     {
                         "description": "Initiate registration data",
@@ -298,7 +341,7 @@
                 "tags": [
                     "accounts"
                 ],
-                "summary": "Register new account",
+                "summary": "Register new account (admin, receptionist)",
                 "parameters": [
                     {
                         "description": "User registration data",
@@ -352,7 +395,7 @@
                 "tags": [
                     "accounts"
                 ],
-                "summary": "Register new patient",
+                "summary": "Register new patient (receptionist)",
                 "parameters": [
                     {
                         "description": "Patient registration data",
@@ -400,7 +443,7 @@
                 "tags": [
                     "accounts"
                 ],
-                "summary": "Register new staff",
+                "summary": "Register new staff (admin)",
                 "parameters": [
                     {
                         "description": "Staff registration data",
@@ -418,6 +461,86 @@
                     },
                     "400": {
                         "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/patients": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get patient list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "patients"
+                ],
+                "summary": "Get patient list (receptionist, doctor)",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.PatientBriefInfo"
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
+                    }
+                }
+            }
+        },
+        "/staffs": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get staff list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "staffs"
+                ],
+                "summary": "Get staff list (admin)",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.StaffInfo"
+                            }
+                        }
                     },
                     "401": {
                         "description": "Unauthorized"
@@ -562,6 +685,23 @@
                 }
             }
         },
+        "models.PatientBriefInfo": {
+            "type": "object",
+            "properties": {
+                "date_of_birth": {
+                    "type": "string"
+                },
+                "full_name": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "patient_id": {
+                    "type": "string"
+                }
+            }
+        },
         "models.PatientRegistrationRequest": {
             "type": "object",
             "properties": {
@@ -593,6 +733,26 @@
                     "type": "string"
                 },
                 "nationality": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.StaffInfo": {
+            "type": "object",
+            "properties": {
+                "date_of_birth": {
+                    "type": "string"
+                },
+                "department": {
+                    "type": "string"
+                },
+                "full_name": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "staff_id": {
                     "type": "string"
                 }
             }
